build-output.txt
cargo :     Checking social-service v0.1.0 (E:\sdkwork-space\sdkwork-im\services\social-service)
所在位置 行:1 字符: 1
+ cargo check --offline 2>&1 | Out-File -FilePath "E:\sdkwork-space\sdk ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking so...social-service):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    Checking sdkwork-im-cli v0.1.0 (E:\sdkwork-space\sdkwork-im\tools\chat-cli)
error[E0308]: mismatched types
    --> services\social-service\src\friendship.rs:2086:26
     |
2086 |         organization_id: None,
     |                          ^^^^ expected `String`, found `Option<_>`
     |
     = note: expected struct `std::string::String`
                  found enum `std::option::Option<_>`

error[E0308]: mismatched types
    --> services\social-service\src\friendship.rs:2234:26
     |
2234 |         organization_id: None,
     |                          ^^^^ expected `String`, found `Option<_>`
     |
     = note: expected struct `std::string::String`
                  found enum `std::option::Option<_>`

For more information about this error, try `rustc --explain E0308`.
error: could not compile `social-service` (lib) due to 2 previous errors
